--- a/css/partials/_global.css
+++ b/css/partials/_global.css
@@ -52,3 +52,13 @@ p.para{
     color: var(--text-color);
     font: normal 500 16px/ 25px var(--chelsea);
 }
+.navbar_fixed{
+    position: fixed;
+    width: 100%;
+    top: -1px;
+    left: 0; right: 0;
+    background: #ffffff;
+    box-shadow: var(--box-shadow);
+    z-index: 999;
+    transition: background 1s ease;
+}
